Refactored dialogue widget to not require text in the _dialogue object, but to be added as text in a switch in a child passage

--- a/mars-colony.scriv/QuickLook/Preview.html
+++ b/mars-colony.scriv/QuickLook/Preview.html
@@ -88,7 +88,8 @@
 
 <ul>
 <li>
-<p class="topLevelItemTitle">Scene</p>
+<p class="topLevelItemTitle">Rover Bay - Chip &amp; Brewster</p>
+<p class="itemText">Chip n’ Bill in the Rover Bay</p>
 </li>
 </ul>
 
