Updated dialogue in scrivener

--- a/NextRock.scriv/QuickLook/Preview.html
+++ b/NextRock.scriv/QuickLook/Preview.html
@@ -118,11 +118,11 @@
 <ul>
 <li>
 <p class="itemTitle">Talk sense</p>
-<p class="itemText">He looks like a man with a serious case of the space willies. More likely, you think, he’s had a little too much of that Martian Hydro he grows in some unknown location.</span></p></p>
+<p class="itemText">Bill Brewster looks like a man with a serious case of the space willies. More likely, you think, he’s had a little too much of that Martian Hydro he grows in some unknown location.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">You chin your suit-to-suit mic and walk toward him. “Listen, man. This place gets to everyone sooner or later. But if this is your way of trying to get a spot back to Earth on the return leg of the next supply run, you’re gonna have to come up with something a tad more believable.”</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Brewster takes a step backward, shaking his h...</p>
+<p class="itemText"><p class="p1"><span class="s1">Taking a step backward, Brewster s...</p>
 </li>
 <li>
 <p class="itemTitle">Tell me</p>
@@ -164,6 +164,10 @@
 </li>
 <li>
 <p class="topLevelItemTitle">Harlan &amp; Bill (Rover 3)</p>
+</li>
+<li>
+<p class="topLevelItemTitle">Harlan &amp; Bill (Airlock)</p>
+<p class="itemText">As you attempt to drag Brewster into the airlock, you in inadvertently cut open his suit on some loose regoligth. It’s fine, but it can slice like a razor.</p>
 </li>
 </ul>
 
