* Updated dialogue in scrivener * Added Chapel Articles macros *

--- a/NextRock.scriv/QuickLook/Preview.html
+++ b/NextRock.scriv/QuickLook/Preview.html
@@ -167,7 +167,7 @@
 </li>
 <li>
 <p class="topLevelItemTitle">Harlan &amp; Bill (Airlock)</p>
-<p class="itemText">As you attempt to drag Brewster into the airlock, you in inadvertently cut open his suit on some loose regoligth. It’s fine, but it can slice like a razor.</p>
+<p class="itemText">As you attempt to drag Brewster into the airlock, you in inadvertently cut open his suit on some loose regolith. It’s fine, but it can slice like a razor.</p>
 </li>
 </ul>
 
