--- a/src/head-content.html
+++ b/src/head-content.html
@@ -1,1 +1,2 @@
 <link rel="icon" type="image/png" href="assets/favicon.png" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One&display=swap" rel="stylesheet">
