--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>NextRock</title>
+<title>NextRock - Ep1</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <!-- NOTE: margin property = top-right-bottom-left -->
