* Massive refactor of project twee folders to support common and episode specific files * Added some scenes in episode 1 * Moved example scene to example episode * Added plot / plot-evaluator macros * Updated gulpfile with new project modules folder location * In package.json,   - added "episode" to "config"   - modified tweego commands to use config.episode for episodic content

--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -163,28 +163,31 @@
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">“But Bill,” he pleads. “I need to do some maintenance before I take her out again.”<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">You know better. Aside from the grime, the rover looks fine. Iverson just doesn’t want you shutting down his weed growing operation. And it’s...</p>
+<p class="itemText"><p class="p1"><span class="s1">Aside from the grime, the rover looks fine. You suspect Iverson knows you’re onto his weed-growing operation and want him to take you to it. ...</p>
 </li>
 </ul>
 </ul>
 <hr class="afterText"/>
 
 <li>
-<p class="itemTitle">Bill &amp; Lonnie (Airlock 1)</p>
+<p class="itemTitle">Bill &amp; Lonnie (Airlock)</p>
 <p class="itemText">Even with Mars tugging at a mere third of Earth’s pull, moving Lonnie Iverson is as about as easy as wrestling a dead moose onto the hood of a Land Rover. As you attempt to drag him into the airlock, you in inadvertently cut open his suit on some loose regolith. The flakes are fine, but can slice like a razor. You hear nothing, but see a dusty plume rise from beneath his right knee.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">You manage to get his lifeless bulk into the airlock with you and close the hatch. A powerful ceiling fan blows d...</p>
 </li>
+<hr class="afterText"/>
+<ul>
 <li>
-<p class="itemTitle">Bill &amp; Lonnie (Airlock 2)</p>
-<p class="itemText">You chin your open-channel suit mic and call for a stretcher.</span></p></p>
+<p class="itemTitle">Call for assistance</p>
+<p class="itemText">You chin your open-channel suit mic and call for a stretcher and someone with a strong back. After grabbing a patch from the repair shelf, you kneel by Iverson and cover the hole in his suit.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Switching over to suit-to-suit, you kneel by Iverson’s crumpled form. “Help’s on the way, Lonnie.”<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“Help’s on the way, Lonnie,” you tell him over suit-to-suit, hoping you’re right.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And you hope it’s true. Lately people haven’t always been at their posts when they should be. This place has got to be back on track before that transport full of new recruits arrives next month.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">That reminds you: how are the new living pods coming along? Pete Daley, Chief of Engineering says all’s well, but maybe you should perform...</p>
+<p class="itemText"><p class="p1"><span class="s1">Lately people haven’t always been at their posts when they should be. Aside from making sure your Life Sciences Officer doesn’t die, getting this place back on track before that crew transport arrives next month is your top...</p>
 </li>
+</ul>
+<hr class="afterText"/>
+
 <li>
 <p class="itemTitle">Bill &amp; Lonnie (Stockade)</p>
 </li>
@@ -193,15 +196,18 @@
 </li>
 <li>
 <p class="itemTitle">Bill (Toilet)</p>
-<p class="itemText">After doffing your spacesuit, you make your way from the airlock through the Central Hub to the Facilities Hub. On the far side of the expansive chamber, several off-duty folks are laughing and dancing to an old disco song. They wave and invite you over, but you’ve got your own boogie shoes on, and right now they’re shuffling like mad for the toilet.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText">After doffing your spacesuit in the Airlock, you make your way through the Central Hub to the Facilities Hub. On the far side of the expansive chamber, several off-duty folks are laughing and dancing to an old disco song. They wave and invite you over, but you’ve got your own boogie shoes on, and right now they’re shuffling like mad for the toilet.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The second you step into the room, you’re hit by a strong odor, and not the sort usually found lingering here.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Are there skunks on Mars? You don...</p>
+<p class="itemText"><p class="p1"><span class="s1">Are there skunks on Mars? You don’t...</p>
 </li>
 </ul>
 <hr class="afterText"/>
 
+<li>
+<p class="topLevelItemTitle">Bill (Rover 3)</p>
+</li>
 <li>
 <p class="topLevelItemTitle">Plot B</p>
 </li>
