Polished the UI and filled in more branches of the first scene.

--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -100,9 +100,9 @@
 <ul>
 <li>
 <p class="itemTitle">Bill (Airlock)</p>
-<p class="itemText">Although modern spacesuits aren’t nearly as bulky as those worn by astronauts of the bygone Apollo and Shuttle eras, they’re still no joy to don. Particularly the kind you’ve jammed your lanky, six-foot frame into. There are much better ones out there, everybody knows it. But in the interest of savings, this is basically the sort you’d find in a Dollar Store bargain bin. If Dollar Store sold spacesuits, that is.</span></p></p>
+<p class="itemText">Modern spacesuits aren’t nearly as bulky as those of the bygone Apollo and Shuttle eras, but they’re still no joy to don. Particularly the kind you’ve jammed your lanky, six-foot frame into. There are much better ones out there, everybody knows it. But in the interest of savings, this is basically the sort you’d find in a Dollar Store bargain bin. If Dollar Store sold spacesuits, that is.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">It occurs to you that if the mega-rich CEO of NextRock Incorporated had ever actual...</p>
+<p class="itemText"><p class="p1"><span class="s1">It occurs to you that if the mega-rich CEO of NextRock Incorporated had ever actually intended to live in h...</p>
 </li>
 <hr class="afterText"/>
 <ul>
