* Refactored scene episodes to folders that match the Scrivener mockup * Updated several scenes and branches * Added an event that's emitted when the branch is changed by an action * Listen for the :scene-branch-taken event and update the cycle by one * Added more plot points

--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -120,11 +120,11 @@
 
 <li>
 <p class="itemTitle">Bill &amp; Lonnie (Rover Bay)</p>
-<p class="itemText">Just as you enter the bay, Rover 3 rolls in from the surface. It comes to a perfect, auto-piloted stop at its charging station. The bay door clangs shut, sending a cloud of regolith into the relative vacuum of the bay.</span></p></p>
+<p class="itemText">Just as you enter the bay, Rover 3 rolls in from the surface. It comes to a perfect, auto-piloted stop at its charging station. The hydraulic door clangs shut, sending a small cloud of regolith into the relative vacuum of the bay.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Lonnie Iverson, the colony’s life sciences officer, hops down from the cab, struggling with his ill-fitting suit. You are reminded of that old saw about packing 50 pounds of manure into a 10 pound bag.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">“They’re real,” Iverson shouts over his suit-to-suit radio. His eyes are wild...</p>
+<p class="itemText"><p class="p1"><span class="s1">“They’re real,” Iverson shouts over his suit-to-suit radio. His e...</p>
 </li>
 <hr class="afterText"/>
 <ul>
@@ -173,7 +173,7 @@
 <p class="itemTitle">Bill &amp; Lonnie (Airlock)</p>
 <p class="itemText">Even with Mars tugging at a mere third of Earth’s pull, moving Lonnie Iverson is as about as easy as wrestling a dead moose onto the hood of a Land Rover. As you attempt to drag him into the airlock, you in inadvertently cut open his suit on some loose regolith. The flakes are fine, but can slice like a razor. You hear nothing, but see a dusty plume rise from beneath his right knee.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">You manage to get his lifeless bulk into the airlock with you and close the hatch. A powerful ceiling fan blows d...</p>
+<p class="itemText"><p class="p1"><span class="s1">You manage to get his lifeless bulk into the airlock with you and close the hatch. Seconds tick away slowly as th...</p>
 </li>
 <hr class="afterText"/>
 <ul>
