More scene updates

--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -171,9 +171,9 @@
 
 <li>
 <p class="itemTitle">Bill &amp; Lonnie (Airlock)</p>
-<p class="itemText">Even with Mars tugging at a mere third of Earth’s pull, moving Lonnie Iverson is as about as easy as wrestling a dead moose onto the hood of a Land Rover. As you attempt to drag him into the airlock, you in inadvertently cut open his suit on some loose regolith. The flakes are fine, but can slice like a razor. You hear nothing, but see a dusty plume rise from beneath his right knee.</span></p></p>
+<p class="itemText">Even with Mars tugging at a mere third of Earth’s pull, moving Lonnie Iverson is as about as easy as wrestling a dead moose onto the hood of a Land Rover. As you attempt to drag him into the airlock, you inadvertently cut open his suit on some loose regolith. The flakes are thin, but can slice like a razor. You hear nothing, but see a dusty plume rise from beneath his right knee.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">You manage to get his lifeless bulk into the airlock with you and close the hatch. Seconds tick away slowly as th...</p>
+<p class="itemText"><p class="p1"><span class="s1">You manage to get his lifeless bulk into the airlock with you and close the hatch. Seconds tick away slowly as the c...</p>
 </li>
 <hr class="afterText"/>
 <ul>
