--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -102,7 +102,7 @@
 <p class="itemTitle">Bill (Airlock)</p>
 <p class="itemText">Modern spacesuits aren’t nearly as bulky as those of the bygone Apollo and Shuttle eras, but they’re still no joy to don. Particularly the kind you’ve jammed your lanky, six-foot frame into. There are much better ones out there, everybody knows it. But in the interest of savings, this is basically the sort you’d find in a Dollar Store bargain bin. If Dollar Store sold spacesuits, that is.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">It occurs to you that if the mega-rich CEO of NextRock Incorporated had ever actually intended to live in h...</p>
+<p class="itemText"><p class="p1"><span class="s1">It occurs to you that if the mega-rich CEO of NextRock Incorporated had ever truly intended to live in his ...</p>
 </li>
 <hr class="afterText"/>
 <ul>
@@ -189,25 +189,23 @@
 <hr class="afterText"/>
 
 <li>
+<p class="itemTitle">Bill &amp; Lonnie (Rover 3)</p>
+</li>
+<li>
 <p class="itemTitle">Bill &amp; Lonnie (Stockade)</p>
 </li>
 <li>
-<p class="itemTitle">Bill &amp; Lonnie (Rover 3)</p>
+<p class="itemTitle">Bill (Rover 3)</p>
 </li>
 <li>
 <p class="itemTitle">Bill (Toilet)</p>
 <p class="itemText">After doffing your spacesuit in the Airlock, you make your way through the Central Hub to the Facilities Hub. On the far side of the expansive chamber, several off-duty folks are laughing and dancing to an old disco song. They wave and invite you over, but you’ve got your own boogie shoes on, and right now they’re shuffling like mad for the toilet.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The second you step into the room, you’re hit by a strong odor, and not the sort usually found lingering here.</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Are there skunks on Mars? You don’t...</p>
+<p class="itemText"><p class="p1"><span class="s1">The second you step into the room, you’re hit by a strong odor, and not the sort usually found lingering here. Are there skunks on Mars? You don’t ...</p>
 </li>
 </ul>
 <hr class="afterText"/>
 
-<li>
-<p class="topLevelItemTitle">Bill (Rover 3)</p>
-</li>
 <li>
 <p class="topLevelItemTitle">Plot B</p>
 </li>
