--- a/NextRock - Ep1.scriv/QuickLook/Preview.html
+++ b/NextRock - Ep1.scriv/QuickLook/Preview.html
@@ -201,7 +201,9 @@
 <p class="itemTitle">Bill (Toilet)</p>
 <p class="itemText">After doffing your spacesuit in the Airlock, you make your way through the Central Hub to the Facilities Hub. On the far side of the expansive chamber, several off-duty folks are laughing and dancing to an old disco song. They wave and invite you over, but you’ve got your own boogie shoes on, and right now they’re shuffling like mad for the toilet.<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The second you step into the room, you’re hit by a strong odor, and not the sort usually found lingering here. Are there skunks on Mars? You don’t ...</p>
+<p class="itemText"><p class="p1"><span class="s1">The second you step into the room, you’re hit by a strong odor, and not the sort usually found lingering here.</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Are there skunks on Mars? You don’t...</p>
 </li>
 </ul>
 <hr class="afterText"/>
